# rust-testing-poc

./: .deepsource.toml  .gitignore  Cargo.toml  Justfile  README.md
.github/workflows/: test.yaml
proc/: Cargo.toml
proc/src/: lib.rs
src/: lib.rs
src/snapshots/: coverage_testing__tests__derive.snap  coverage_testing__tests__derive_xd.snap  coverage_testing__tests__snapshot-2.snap  coverage_testing__tests__snapshot-3.snap  coverage_testing__tests__snapshot-4.snap  coverage_testing__tests__snapshot.snap
test-runner/: Cargo.toml
test-runner/src/: deps.rs  lib.rs
ui/: runner.rs
ui/snapshots/: ui::tests::derive.snap  ui::tests::proc.snap
ui/tests/: derive.rs  proc.rs
