[workspace]
members = ["proc"]

[package]
name = "coverage-testing"
version = "0.1.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
proc = { path = "proc" }
serde_derive2 = { version = "1.0", package = "serde_derive" }
serde = "1.0"

[dev-dependencies]
insta = "1.2.0"
postcompile = { version = "0.0.4", features = ["prettyplease"]}
