[package]
name = "test-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
insta = "1.2.0"
serde_json = "1.0"
cargo_metadata = "0.19.1"
cargo-platform = "0.1"
target-triple = "0.1"
serde_derive = "1.0"
serde = "1.0"
libtest-mimic = "0.8.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)', 'cfg(trybuild_no_target)'] }
